# otel-getting-started

./: app.py  docker-compose.yml  otel-collector-config.yaml  pyproject.toml
