[project]
name = "otel-getting-started"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "opentelemetry-api>=1.33.1",
    "opentelemetry-distro>=0.54b1",
    "opentelemetry-exporter-otlp>=1.33.1",
    "opentelemetry-instrumentation>=0.54b1",
    "opentelemetry-instrumentation-asyncio>=0.54b1",
    "opentelemetry-instrumentation-click>=0.54b1",
    "opentelemetry-instrumentation-dbapi>=0.54b1",
    "opentelemetry-instrumentation-flask>=0.54b1",
    "opentelemetry-instrumentation-jinja2>=0.54b1",
    "opentelemetry-instrumentation-logging>=0.54b1",
    "opentelemetry-instrumentation-sqlite3>=0.54b1",
    "opentelemetry-instrumentation-threading>=0.54b1",
    "opentelemetry-instrumentation-urllib>=0.54b1",
    "opentelemetry-instrumentation-wsgi>=0.54b1",
    "opentelemetry-sdk>=1.33.1",
]
